Closed
Bug 590453
Opened 15 years ago
Closed 15 years ago
Scale (slider) refresh bug: shows all previous positions
Categories
(Toolkit :: UI Widgets, defect)
Tracking
()
VERIFIED
FIXED
mozilla2.0b11
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: pierre, Assigned: jimm)
References
Details
(Keywords: regression, Whiteboard: [softblocker][fx4-fixed-bugday])
Attachments
(4 files, 1 obsolete file)
|
133 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
70.59 KB,
image/png
|
Details | |
|
894 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
728 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.9pre) Gecko/20100824 Namoroka/3.6.9pre
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b4) Gecko/20100818 Firefox/4.0b4
When moving a scale, with mouse of keyboard, previous position does not disappear.
Everything becomes find when I resize the window.
Reproducible: Always
Steps to Reproduce:
1. Open the testcase
2. Move the scale
Actual Results:
Show all previous positions, see screenshot.
Expected Results:
Should remove previous positions, showing only current one.
| Reporter | ||
Updated•15 years ago
|
Version: unspecified → Trunk
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Comment 2•15 years ago
|
||
| Reporter | ||
Comment 3•15 years ago
|
||
Attachment #468994 -
Attachment is obsolete: true
| Reporter | ||
Comment 4•15 years ago
|
||
The bug disappears when the window is resized, or looses focus.
| Reporter | ||
Comment 5•15 years ago
|
||
Works well on Linux and MacOSX.
Bug on Windows 7.
Not tested on Windows XP.
| Reporter | ||
Updated•15 years ago
|
Summary: Scale (slider) shows previous positions → Scale (slider) refresh bug: shows all previous positions
Comment 6•15 years ago
|
||
Confirming for Vista.Mozilla/5.0 (Windows NT 6.0; WOW64; rv:2.0b7pre) Gecko/20100919 Firefox/4.0b7preI'm seeing the same thing the original reporter is. The background behind the scale's sliding head is not refreshing while the mouse is down, so you see trails where the slider has been. The background refreshes when you release the mouse button.You can see the same thing with the add-on DownThemAll, which uses the scale element in its Preferences dialog.
Status: UNCONFIRMED → NEW
Component: XUL → XUL Widgets
Ever confirmed: true
Product: Core → Toolkit
QA Contact: xptoolkit.widgets → xul.widgets
Comment 7•15 years ago
|
||
Sorry about the lack of line breaks, somehow they got lost during copy-paste ...
Anyway, that u-a string is:
Mozilla/5.0 (Windows NT 6.0; WOW64; rv:2.0b7pre) Gecko/20100919 Firefox/4.0b7pre
Comment 8•15 years ago
|
||
I see the same thing on Mozilla/5.0 (Windows NT 6.0; rv:2.0b7pre) Gecko/20100922 Firefox/4.0b7pre. When hardware acceleration is off I see the same as in the screenshot, and when hardware acceleration is on, I see a black background.
Comment 9•15 years ago
|
||
Works:
http://hg.mozilla.org/mozilla-central/rev/b84d0be52070
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010/06/2010-06-10-03-mozilla-central/
Broken:
http://hg.mozilla.org/mozilla-central/rev/431eab8cf6ab
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010/06/2010-06-11-03-mozilla-central/
Changes:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b84d0be52070&tochange=431eab8cf6ab
Keywords: regression
Comment 10•15 years ago
|
||
On windows XP; Firefox/4.0b9pre the slider background turns black when the cursor first enters the slider's rectangle, but background disappears when cursor is over the slider.
Comment 11•15 years ago
|
||
From http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b84d0be52070&tochange=431eab8cf6ab the most interesting change description seems to be for bug 555133. In that change, the only Windows specific change is in nsNativeThemeWin::GetWidgetTransparency (http://mxr.mozilla.org/mozilla-central/source/widget/src/windows/nsNativeThemeWin.cpp#2225 ). When I change that function to always return eUnknownTransparency, the problem goes away.
Blocks: 555133
| Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
Comment 12•15 years ago
|
||
Unless this is visible somewhere in the main Firefox UI I think this only softblocks.
Rob, Jim, this sounds like one of yours?
blocking2.0: ? → final+
Whiteboard: [softblocker]
| Assignee | ||
Comment 13•15 years ago
|
||
Odd, IsThemeBackgroundPartiallyTransparent return false, yet, the background of the control is the underlying content. Attached is a patch that fixes the problem.
Assignee: nobody → jmathies
Attachment #507184 -
Flags: review?(roc)
Attachment #507184 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 14•15 years ago
|
||
Comment 15•15 years ago
|
||
Pushed to mozilla-central
http://hg.mozilla.org/mozilla-central/rev/7bd612d05f85
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
Comment 16•15 years ago
|
||
The testcase does not seem to open. Is there a way we can verify this bug as fixed?
Whiteboard: [softblocker] → [softblocker][fx4-fixed-bugday]
| Assignee | ||
Comment 17•15 years ago
|
||
(In reply to comment #16)
> The testcase does not seem to open. Is there a way we can verify this bug as
> fixed?
Install this extension:
https://addons.mozilla.org/en-US/firefox/addon/remote-xul-manager/
add 'bugzilla.mozilla.org' in the white list config under tools
It should open.
Or you can restrict this to local files you save to your desktop by adding <Local files>.
Comment 18•15 years ago
|
||
Thanks for the help, Jim.
Verified fixed on Firefox 4.0b12pre 20110214.
Status: RESOLVED → VERIFIED
Comment 19•15 years ago
|
||
On Firefox 4.0b11, the fixed version does not show the dotted box around the slider when it gains the focus.
You need to log in
before you can comment on or make changes to this bug.
Description
•