Bug 590453 - Set the theme background for sliders to opaque, fixes a redraw issue. r=roc, a=final.